# Airflow-Data-Processing-Pipeline

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  init-db.sql  pyproject.toml
dags/: fetch_dag.py
dags/scripts/: utils.py
data/: jobs.csv
